# rays-of-sunshine

./: .gitignore  CMakeLists.txt  README.md  fbo-design.txt
notes/: pcg.md  project-plan.md
resources/shaders/: building.frag  building.vert  default.frag  default.vert  dof.frag  hblur.frag  vblur.frag  vblur.vert
scenefiles/inputs/: cube.json  cube_no_light.json  default.json
src/: main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.cpp.autosave  realtime.h  settings.h
src/features/: bezier.cpp  bezier.h  buildinggenerator.cpp  buildinggenerator.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cylinder.cpp  Cylinder.h  Sphere.cpp  Tet.cpp  Triangle.cpp  building.cpp  building.h
src/utils/: aspectratiowidget.hpp  camera.cpp  camera.h  debug.h  scenedata.h  sceneparser.cpp  sceneparser.h  shadermanager.h
